# grpc-service-forwarding

./: CMakeLists.txt  README.md
MsgForwardingClient/: CMakeLists.txt  client.cpp
MsgForwardingService/: CMakeLists.txt  server.cpp
proto/: CMakeLists.txt  MsgForwarding.proto  MsgForwardingServer.proto
